# Soteria

./: .gitignore  Cargo.toml  GRADING.md  README.md  TESTING.md  test-runner.py  test-runner.sh
.claude/: settings.local.json
programs/amm/: README.md
programs/amm/amm-secure/: Anchor.toml  Cargo.toml  package-lock.json
programs/amm/amm-secure/src/: constants.rs  errors.rs  helpers.rs  lib.rs
programs/amm/amm-secure/src/instructions/: deposit_liquidity.rs  initialize_pool.rs  lock_pool.rs  swap_tokens.rs  unlock_pool.rs  withdraw_liquidity.rs
programs/amm/amm-secure/src/state/: mod.rs  pool_config.rs
programs/amm/amm-secure/tests/: integration.rs  utils.rs
programs/amm/amm-vulnerable/: Anchor.toml  Cargo.toml  TESTING.md  VULNERABILITIES.md  package-lock.json
programs/amm/amm-vulnerable/src/: constants.rs  errors.rs  helpers.rs  lib.rs
programs/amm/amm-vulnerable/src/instructions/: deposit_liquidity.rs  initialize_pool.rs  lock_pool.rs  mod.rs  swap_tokens.rs  unlock_pool.rs  withdraw_liquidity.rs
programs/amm/amm-vulnerable/src/state/: pool_config.rs
programs/amm/amm-vulnerable/tests/: amm-vulnerable.ts  integration.rs  utils.rs
programs/governance/: README.md
programs/governance/g-secure/: Anchor.toml  Cargo.toml  package-lock.json
programs/governance/g-secure/src/: constants.rs  errors.rs  lib.rs
programs/governance/g-secure/src/instructions/: create_profile.rs  init.rs  initialize_treasury.rs  mod.rs  reset_season.rs  stake_tokens.rs  unstake_tokens.rs  vote.rs
programs/governance/g-secure/src/state/: mod.rs  treasury.rs  user_profile.rs  vote.rs
programs/governance/g-secure/tests/: g-secure.ts  integration.rs  utils.rs
programs/governance/g-vulnerable/: Anchor.toml  Cargo.toml  package-lock.json
programs/governance/g-vulnerable/src/: constants.rs  errors.rs  lib.rs
programs/governance/g-vulnerable/src/instructions/: create_profile.rs  init.rs  initialize_treasury.rs  reset_season.rs  stake_tokens.rs  unstake_tokens.rs  vote.rs
programs/governance/g-vulnerable/src/state/: treasury.rs  user_profile.rs  vote.rs
programs/governance/g-vulnerable/tests/: g-vulnerable.ts  integration.rs  utils.rs
programs/multisig/: Bitwise-note.md  README.md
programs/multisig/m-secure/: Anchor.toml  Cargo.toml  package-lock.json
programs/multisig/m-secure/src/: constants.rs  errors.rs  lib.rs
programs/multisig/m-secure/src/instructions/: approve_proposal.rs  approve_transfer_proposal.rs  cancel_proposal.rs  cancel_transfer_proposal.rs  create_multisig.rs  create_proposal.rs  create_transfer_proposal.rs  execute_proposal.rs  execute_transfer_proposal.rs  mod.rs  toggle_pause.rs
programs/multisig/m-secure/src/state/: member.rs  mod.rs  multisig.rs  proposal.rs  transfer_proposal.rs
programs/multisig/m-secure/tests/: test.rs
programs/multisig/m-vulnerable/: Anchor.toml  Cargo.toml  VULNERABILITIES.md
programs/multisig/m-vulnerable/src/: constants.rs  errors.rs  lib.rs
programs/multisig/m-vulnerable/src/instructions/: approve_proposal.rs  approve_transfer_proposal.rs  cancel_proposal.rs  create_multisig.rs  create_proposal.rs  create_transfer_proposal.rs  execute_proposal.rs  execute_transfer_proposal.rs  mod.rs  toggle_pause.rs
programs/multisig/m-vulnerable/src/state/: member.rs  mod.rs  multisig.rs  proposal.rs  transfer_proposal.rs
programs/multisig/m-vulnerable/tests/: exploit_double_approval.rs  exploit_recipient_substitution.rs  exploit_threshold_bypass.rs  exploit_timelock_bypass.rs  exploit_unauthorized_pause.rs  utils.rs
programs/nfts/n-secure/: Anchor.toml  Cargo.toml  package-lock.json
programs/nfts/n-secure/src/: lib.rs
programs/nfts/n-secure/src/instructions/: create_collection.rs  mint_nft.rs  mod.rs  stake.rs  unstake.rs
programs/nfts/n-secure/src/state/: collection_state.rs
programs/nfts/n-secure/tests/: integration.rs  utils.rs
programs/nfts/n-vulnerable/: Anchor.toml  Cargo.toml  package-lock.json
programs/nfts/n-vulnerable/src/: constants.rs  errors.rs  lib.rs
programs/nfts/n-vulnerable/src/instructions/: create_collection.rs  mint_nft.rs  stake.rs  unstake.rs
programs/nfts/n-vulnerable/src/state/: collection_state.rs  mod.rs
programs/nfts/n-vulnerable/tests/: vulnerable.ts
programs/pino-escrow/: README.md
programs/pino-escrow/p-secure/: Cargo.toml
programs/pino-escrow/p-secure/src/: lib.rs
programs/pino-escrow/p-secure/src/instructions/: mod.rs  propose_offer.rs  take_offer.rs
programs/pino-escrow/p-secure/tests/: integration.rs
programs/pino-escrow/p-vulnerable/: Cargo.toml
programs/pino-escrow/p-vulnerable/src/: lib.rs
programs/pino-escrow/p-vulnerable/src/instructions/: mod.rs  propose_offer.rs  take_offer.rs
programs/pino-escrow/p-vulnerable/src/state/: make.rs
programs/pino-escrow/p-vulnerable/tests/: exploit_double_take.rs  exploit_fake_offer.rs  exploit_missing_signer.rs  exploit_wrong_proposer.rs  utils.rs
