[workspace]
members = [
    "programs/pino-escrow/p-vulnerable",
    "programs/pino-escrow/p-secure",
    "programs/multisig/m-secure",
    "programs/multisig/m-vulnerable",
    "programs/nfts/n-secure",
    "programs/nfts/n-vulnerable", 
    "programs/amm/amm-secure",
    "programs/amm/amm-vulnerable",
     "programs/governance/g-secure",
     "programs/governance/g-vulnerable",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]

# Anchor Framework
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }

# SPL Programs
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"

# Pinocchio Framework
pinocchio = { version = "0.10.1", features = ["copy"] }
pinocchio-log = "0.5.1"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-associated-token-account = "0.3.0"

# Solana Core
solana-address = { version = "2.0.0", features = ["curve25519"] }
solana-sdk = "3.0.0"
solana-system-interface = "3.0.0"

# Testing
litesvm = "0.9.1"
litesvm-token = "0.9.1"
borsh = "1.6.0"

# Utilities
bytemuck = { version = "1.24.0", features = ["derive"] }
sha2 = "0.10.8"

# Metaplex
mpl-core = { version = "0.11.1", features = ["anchor"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
