[package]
name = "g-vulnerable"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "g_vulnerable"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
spl-associated-token-account.workspace = true

[dev-dependencies]
litesvm.workspace = true
litesvm-token.workspace = true
solana-sdk.workspace = true
sha2.workspace = true
solana-system-interface.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
