[package]
name = "n-secure"
version = "0.1.0"
description = "Secure NFT Staking Program using Metaplex Core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking_secure"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang.workspace = true
borsh.workspace = true
mpl-core.workspace = true

[dev-dependencies]
litesvm.workspace = true
solana-sdk.workspace = true
sha2.workspace = true
solana-system-interface.workspace = true


[lints]
workspace = true
