[package]
name = "n-vulnerable"
version = "0.1.0"
description = "Vulnerable NFT Staking Program (Educational)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vulnerable"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang.workspace = true
mpl-core.workspace = true

[dev-dependencies]
litesvm.workspace = true
solana-sdk.workspace = true
sha2.workspace = true

[lints]
workspace = true
